--- a/Lending.ipynb
+++ b/Lending.ipynb
@@ -6,7 +6,7 @@
       "name": "Lending.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMRgpAxA9HGtf/8m9GEsuHn",
+      "authorship_tag": "ABX9TyMsogDs1C5roDXR39ukdw5E",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,7 +35,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zifAYBQgfzcD",
-        "outputId": "5fbb2a4a-b175-49b1-aa24-bdc2b2d5d605"
+        "outputId": "e1f7a483-b761-4dbb-b534-f08a7be9fae2"
       },
       "source": [
         "pip install ftx"
@@ -46,13 +46,13 @@
           "output_type": "stream",
           "text": [
             "Requirement already satisfied: ftx in /usr/local/lib/python3.7/dist-packages (1.0.2)\n",
-            "Requirement already satisfied: requests==2.23.0 in /usr/local/lib/python3.7/dist-packages (from ftx) (2.23.0)\n",
-            "Requirement already satisfied: satoshi==0.1.3 in /usr/local/lib/python3.7/dist-packages (from ftx) (0.1.3)\n",
             "Requirement already satisfied: schedule==0.6.0 in /usr/local/lib/python3.7/dist-packages (from ftx) (0.6.0)\n",
-            "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /usr/local/lib/python3.7/dist-packages (from requests==2.23.0->ftx) (1.24.3)\n",
+            "Requirement already satisfied: satoshi==0.1.3 in /usr/local/lib/python3.7/dist-packages (from ftx) (0.1.3)\n",
+            "Requirement already satisfied: requests==2.23.0 in /usr/local/lib/python3.7/dist-packages (from ftx) (2.23.0)\n",
             "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.7/dist-packages (from requests==2.23.0->ftx) (2.10)\n",
-            "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.7/dist-packages (from requests==2.23.0->ftx) (3.0.4)\n",
-            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.7/dist-packages (from requests==2.23.0->ftx) (2020.12.5)\n"
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.7/dist-packages (from requests==2.23.0->ftx) (2020.12.5)\n",
+            "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /usr/local/lib/python3.7/dist-packages (from requests==2.23.0->ftx) (1.24.3)\n",
+            "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.7/dist-packages (from requests==2.23.0->ftx) (3.0.4)\n"
           ],
           "name": "stdout"
         }
@@ -65,7 +65,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3yjTeu7LgfDH",
-        "outputId": "1ac776c3-e291-4eef-f1c6-ed46697d9a76"
+        "outputId": "bb867572-8e03-43f3-eb24-0383dec53043"
       },
       "source": [
         "pip install ciso8601"
@@ -88,7 +88,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "iIziglL3gk7R",
-        "outputId": "b752ede2-ed32-43d6-aa28-7fc3206650e1"
+        "outputId": "f8eee4f2-5b6b-40f5-ba48-9e3cad8f4525"
       },
       "source": [
         "pip install ccxt"
@@ -99,22 +99,22 @@
           "output_type": "stream",
           "text": [
             "Requirement already satisfied: ccxt in /usr/local/lib/python3.7/dist-packages (1.44.2)\n",
-            "Requirement already satisfied: yarl==1.1.0; python_version >= \"3.5.2\" in /usr/local/lib/python3.7/dist-packages (from ccxt) (1.1.0)\n",
-            "Requirement already satisfied: aiodns<2.1,>=1.1.1; python_version >= \"3.5.2\" in /usr/local/lib/python3.7/dist-packages (from ccxt) (2.0.0)\n",
             "Requirement already satisfied: certifi>=2018.1.18 in /usr/local/lib/python3.7/dist-packages (from ccxt) (2020.12.5)\n",
-            "Requirement already satisfied: setuptools>=38.5.1 in /usr/local/lib/python3.7/dist-packages (from ccxt) (54.1.2)\n",
             "Requirement already satisfied: aiohttp<3.8,>=3.7.4; python_version >= \"3.5.2\" in /usr/local/lib/python3.7/dist-packages (from ccxt) (3.7.4.post0)\n",
-            "Requirement already satisfied: cryptography>=2.6.1 in /usr/local/lib/python3.7/dist-packages (from ccxt) (3.4.6)\n",
+            "Requirement already satisfied: setuptools>=38.5.1 in /usr/local/lib/python3.7/dist-packages (from ccxt) (54.1.2)\n",
             "Requirement already satisfied: requests>=2.18.4 in /usr/local/lib/python3.7/dist-packages (from ccxt) (2.23.0)\n",
-            "Requirement already satisfied: multidict>=4.0 in /usr/local/lib/python3.7/dist-packages (from yarl==1.1.0; python_version >= \"3.5.2\"->ccxt) (5.1.0)\n",
-            "Requirement already satisfied: idna>=2.0 in /usr/local/lib/python3.7/dist-packages (from yarl==1.1.0; python_version >= \"3.5.2\"->ccxt) (2.10)\n",
-            "Requirement already satisfied: pycares>=3.0.0 in /usr/local/lib/python3.7/dist-packages (from aiodns<2.1,>=1.1.1; python_version >= \"3.5.2\"->ccxt) (3.1.1)\n",
+            "Requirement already satisfied: aiodns<2.1,>=1.1.1; python_version >= \"3.5.2\" in /usr/local/lib/python3.7/dist-packages (from ccxt) (2.0.0)\n",
+            "Requirement already satisfied: cryptography>=2.6.1 in /usr/local/lib/python3.7/dist-packages (from ccxt) (3.4.6)\n",
+            "Requirement already satisfied: yarl==1.1.0; python_version >= \"3.5.2\" in /usr/local/lib/python3.7/dist-packages (from ccxt) (1.1.0)\n",
             "Requirement already satisfied: chardet<5.0,>=2.0 in /usr/local/lib/python3.7/dist-packages (from aiohttp<3.8,>=3.7.4; python_version >= \"3.5.2\"->ccxt) (3.0.4)\n",
-            "Requirement already satisfied: attrs>=17.3.0 in /usr/local/lib/python3.7/dist-packages (from aiohttp<3.8,>=3.7.4; python_version >= \"3.5.2\"->ccxt) (20.3.0)\n",
-            "Requirement already satisfied: typing-extensions>=3.6.5 in /usr/local/lib/python3.7/dist-packages (from aiohttp<3.8,>=3.7.4; python_version >= \"3.5.2\"->ccxt) (3.7.4.3)\n",
+            "Requirement already satisfied: multidict<7.0,>=4.5 in /usr/local/lib/python3.7/dist-packages (from aiohttp<3.8,>=3.7.4; python_version >= \"3.5.2\"->ccxt) (5.1.0)\n",
             "Requirement already satisfied: async-timeout<4.0,>=3.0 in /usr/local/lib/python3.7/dist-packages (from aiohttp<3.8,>=3.7.4; python_version >= \"3.5.2\"->ccxt) (3.0.1)\n",
-            "Requirement already satisfied: cffi>=1.12 in /usr/local/lib/python3.7/dist-packages (from cryptography>=2.6.1->ccxt) (1.14.5)\n",
+            "Requirement already satisfied: typing-extensions>=3.6.5 in /usr/local/lib/python3.7/dist-packages (from aiohttp<3.8,>=3.7.4; python_version >= \"3.5.2\"->ccxt) (3.7.4.3)\n",
+            "Requirement already satisfied: attrs>=17.3.0 in /usr/local/lib/python3.7/dist-packages (from aiohttp<3.8,>=3.7.4; python_version >= \"3.5.2\"->ccxt) (20.3.0)\n",
+            "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.7/dist-packages (from requests>=2.18.4->ccxt) (2.10)\n",
             "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /usr/local/lib/python3.7/dist-packages (from requests>=2.18.4->ccxt) (1.24.3)\n",
+            "Requirement already satisfied: pycares>=3.0.0 in /usr/local/lib/python3.7/dist-packages (from aiodns<2.1,>=1.1.1; python_version >= \"3.5.2\"->ccxt) (3.1.1)\n",
+            "Requirement already satisfied: cffi>=1.12 in /usr/local/lib/python3.7/dist-packages (from cryptography>=2.6.1->ccxt) (1.14.5)\n",
             "Requirement already satisfied: pycparser in /usr/local/lib/python3.7/dist-packages (from cffi>=1.12->cryptography>=2.6.1->ccxt) (2.20)\n"
           ],
           "name": "stdout"
@@ -1277,7 +1277,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FiCBqwKskxHF",
-        "outputId": "a4b542b3-0edb-4b8c-aa05-ffb522272594"
+        "outputId": "daa5331f-1752-43c5-be9e-4c437537325e"
       },
       "source": [
         "balance = client.get_balances()\n",
@@ -1330,7 +1330,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SyS5qjO6WcQl",
-        "outputId": "c70cf59a-d563-4e47-d290-30379071a83f"
+        "outputId": "0bb90075-6b47-4c42-96db-b570847cfe16"
       },
       "source": [
         "# show rate\n",
@@ -1377,7 +1377,7 @@
               " {'coin': 'DOGE', 'estimate': 1e-06, 'previous': 1e-06},\n",
               " {'coin': 'ETH', 'estimate': 2.72e-06, 'previous': 2.72e-06},\n",
               " {'coin': 'ETHE', 'estimate': 2.28e-06, 'previous': 2.28e-06},\n",
-              " {'coin': 'EUR', 'estimate': 2.28e-06, 'previous': 2.28e-06},\n",
+              " {'coin': 'EUR', 'estimate': 1.027e-05, 'previous': 2.28e-06},\n",
               " {'coin': 'FB', 'estimate': 1e-06, 'previous': 1e-06},\n",
               " {'coin': 'GBP', 'estimate': 5.14e-06, 'previous': 5.14e-06},\n",
               " {'coin': 'GBTC', 'estimate': 1e-06, 'previous': 1e-06},\n",
@@ -1395,7 +1395,7 @@
               " {'coin': 'LTC', 'estimate': 1e-06, 'previous': 1e-06},\n",
               " {'coin': 'MATIC', 'estimate': 1e-06, 'previous': 1e-06},\n",
               " {'coin': 'MKR', 'estimate': 4.45e-06, 'previous': 4.45e-06},\n",
-              " {'coin': 'MOB', 'estimate': 0.00016289, 'previous': 0.0001583},\n",
+              " {'coin': 'MOB', 'estimate': 0.00016781, 'previous': 0.0001583},\n",
               " {'coin': 'MRNA', 'estimate': 1e-06, 'previous': 1e-06},\n",
               " {'coin': 'MSTR', 'estimate': 1e-06, 'previous': 1e-06},\n",
               " {'coin': 'NFLX', 'estimate': 1e-06, 'previous': 1e-06},\n",
@@ -1419,7 +1419,7 @@
               " {'coin': 'SXP', 'estimate': 1e-06, 'previous': 1e-06},\n",
               " {'coin': 'TLRY', 'estimate': 1e-06, 'previous': 1e-06},\n",
               " {'coin': 'TOMO', 'estimate': 1e-06, 'previous': 1e-06},\n",
-              " {'coin': 'TRX', 'estimate': 1.14e-06, 'previous': 1.14e-06},\n",
+              " {'coin': 'TRX', 'estimate': 1e-06, 'previous': 1.14e-06},\n",
               " {'coin': 'TRYB', 'estimate': 1e-06, 'previous': 1e-06},\n",
               " {'coin': 'TSLA', 'estimate': 3.42e-06, 'previous': 3.42e-06},\n",
               " {'coin': 'TSM', 'estimate': 1e-06, 'previous': 1e-06},\n",
@@ -1515,7 +1515,7 @@
         "  balance = client.get_balances()\n",
         "  trade.set_private_margin_lending_offer(balance[coin][\"coin\"], lend_amount , rate)\n",
         " \n",
-        "  print(\"Report :\" , client._get(\"spot_margin/lending_info\")[0]) #####"
+        "  print(\"Report :\" , client._get(\"spot_margin/lending_info\")[coin]) #####"
       ],
       "execution_count": 17,
       "outputs": []
@@ -1559,7 +1559,7 @@
         "    print(\"do nothing cause rate no change\")\n",
         "    print(\"No action\")"
       ],
-      "execution_count": 20,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -1567,10 +1567,9 @@
       "metadata": {
         "id": "RuPxp_qoBUr6",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 511
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "64b7d03f-d514-4706-fe75-26c34579a619"
+        "outputId": "a4436de7-7e39-4916-9da2-178c67f3f162"
       },
       "source": [
         "def main():\n",
@@ -1599,11 +1598,12 @@
         "  \n",
         "  main()\n",
         "  sleep(30)\n",
+        "  \n",
         "    \n",
         "else:\n",
         "  print(\"something error\")"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1612,7 +1612,7 @@
             "total USD is 2.10116742\n",
             "total USD available to borrow is 0.84116742\n",
             "total USD of 60.0% amount is 1.2607004519999998\n",
-            "check price 2021-03-23 13:23:05.075961+07:00 @Bangkok time zome\n",
+            "check price 2021-03-23 13:50:37.962821+07:00 @Bangkok time zome\n",
             "Report : {'coin': 'USD', 'locked': 1.26, 'lendable': 2.10116742, 'offered': 0.00070045, 'minRate': 1e-06}\n",
             "-----------------end loop----------------------\n",
             "-                                                       -\n",
@@ -1620,23 +1620,20 @@
             "total USD is 2.10116742\n",
             "total USD available to borrow is 0.84116742\n",
             "total USD of 60.0% amount is 1.2607004519999998\n",
-            "check price 2021-03-23 13:23:35.883990+07:00 @Bangkok time zome\n",
+            "check price 2021-03-23 13:51:08.755650+07:00 @Bangkok time zome\n",
+            "Report : {'coin': 'USD', 'locked': 1.26, 'lendable': 2.10116742, 'offered': 0.00070045, 'minRate': 1e-06}\n",
+            "-----------------end loop----------------------\n",
+            "-                                                       -\n",
+            "-----------------start loop----------------------\n",
+            "total USD is 2.10116742\n",
+            "total USD available to borrow is 0.84116742\n",
+            "total USD of 60.0% amount is 1.2607004519999998\n",
+            "check price 2021-03-23 13:51:39.583286+07:00 @Bangkok time zome\n",
             "Report : {'coin': 'USD', 'locked': 1.26, 'lendable': 2.10116742, 'offered': 0.00070045, 'minRate': 1e-06}\n",
             "-----------------end loop----------------------\n",
             "-                                                       -\n"
           ],
           "name": "stdout"
-        },
-        {
-          "output_type": "error",
-          "ename": "KeyboardInterrupt",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-21-5ee668fa13ca>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m   \u001b[0mmain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 26\u001b[0;31m   \u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m30\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     27\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     28\u001b[0m \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-          ]
         }
       ]
     }
