--- a/Lending.ipynb
+++ b/Lending.ipynb
@@ -6,7 +6,7 @@
       "name": "Lending.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMsogDs1C5roDXR39ukdw5E",
+      "authorship_tag": "ABX9TyOkdvjrE0VPCMuYyw9nX5TN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -154,14 +154,14 @@
         "id": "d9RsA3vigwtd"
       },
       "source": [
-        "Public_URL = 'https://ftx.com/api'\n",
-        "ApiKey = \"gtiu5hQbvzwhOYpCYH35xcjUQ8GySUUGNCw4jnN\"\n",
-        "Secret = \"X0C9xO2BJFARMUsxeWz6ABKz1xGk3sctMq1qGsg\"\n",
-        "my_subaccount_nickname  = \"BOTRebalanceXRP\" \n",
+        "ApiKey = \"gtiu5hQbvzwhOYpCYH35xcjUQ8GySUUGNCw4jnN\" # apikey\n",
+        "Secret = \"X0C9xO2BJFARMUsxeWz6ABKz1xGk3sctMq1qGsg\" # apisecret\n",
+        "my_subaccount_nickname  = \"BOTRebalanceXRP\" # sub-account name\n",
         "\n",
         "# log in \n",
         "client = ftx.FtxClient(Public_URL, ApiKey, Secret, my_subaccount_nickname)\n",
         "\n",
+        "Public_URL = 'https://ftx.com/api'\n",
         "PUBLIC_API_URL = 'https://ftx.com/api'\n",
         "PRIVATE_API_URL = 'https://ftx.com/api'"
       ],
@@ -1567,7 +1567,8 @@
       "metadata": {
         "id": "RuPxp_qoBUr6",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 1000
         },
         "outputId": "a4436de7-7e39-4916-9da2-178c67f3f162"
       },
@@ -1603,7 +1604,7 @@
         "else:\n",
         "  print(\"something error\")"
       ],
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -1631,9 +1632,52 @@
             "check price 2021-03-23 13:51:39.583286+07:00 @Bangkok time zome\n",
             "Report : {'coin': 'USD', 'locked': 1.26, 'lendable': 2.10116742, 'offered': 0.00070045, 'minRate': 1e-06}\n",
             "-----------------end loop----------------------\n",
+            "-                                                       -\n",
+            "-----------------start loop----------------------\n",
+            "total USD is 2.10116742\n",
+            "total USD available to borrow is 0.84116742\n",
+            "total USD of 60.0% amount is 1.2607004519999998\n",
+            "check price 2021-03-23 13:52:10.425105+07:00 @Bangkok time zome\n",
+            "Report : {'coin': 'USD', 'locked': 1.26, 'lendable': 2.10116742, 'offered': 0.00070045, 'minRate': 1e-06}\n",
+            "-----------------end loop----------------------\n",
+            "-                                                       -\n",
+            "-----------------start loop----------------------\n",
+            "total USD is 2.10116742\n",
+            "total USD available to borrow is 0.84116742\n",
+            "total USD of 60.0% amount is 1.2607004519999998\n",
+            "check price 2021-03-23 13:52:41.296238+07:00 @Bangkok time zome\n",
+            "Report : {'coin': 'USD', 'locked': 1.26, 'lendable': 2.10116742, 'offered': 0.00070045, 'minRate': 1e-06}\n",
+            "-----------------end loop----------------------\n",
+            "-                                                       -\n",
+            "-----------------start loop----------------------\n",
+            "total USD is 2.10116742\n",
+            "total USD available to borrow is 0.84116742\n",
+            "total USD of 60.0% amount is 1.2607004519999998\n",
+            "check price 2021-03-23 13:53:12.044792+07:00 @Bangkok time zome\n",
+            "Report : {'coin': 'USD', 'locked': 1.26, 'lendable': 2.10116742, 'offered': 0.00070045, 'minRate': 1e-06}\n",
+            "-----------------end loop----------------------\n",
+            "-                                                       -\n",
+            "-----------------start loop----------------------\n",
+            "total USD is 2.10116742\n",
+            "total USD available to borrow is 0.84116742\n",
+            "total USD of 60.0% amount is 1.2607004519999998\n",
+            "check price 2021-03-23 13:53:42.988665+07:00 @Bangkok time zome\n",
+            "Report : {'coin': 'USD', 'locked': 1.26, 'lendable': 2.10116742, 'offered': 0.00070045, 'minRate': 1e-06}\n",
+            "-----------------end loop----------------------\n",
             "-                                                       -\n"
           ],
           "name": "stdout"
+        },
+        {
+          "output_type": "error",
+          "ename": "KeyboardInterrupt",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-19-9248cdb8d104>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m   \u001b[0mmain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 26\u001b[0;31m   \u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m30\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     27\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     28\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+          ]
         }
       ]
     }
