--- a/Lending.ipynb
+++ b/Lending.ipynb
@@ -6,7 +6,7 @@
       "name": "Lending.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPCmGxfhn/i0S2lTBD56spY",
+      "authorship_tag": "ABX9TyP2Wk9lg0vZrpoxKGr/saFg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1583,15 +1583,21 @@
         "\n",
         "        spot_lend = client._get(\"spot_margin/lending_info\")[coin]\n",
         "\n",
-        "        if spot_lend['offered'] == spot_lend['locked']:\n",
+        "        if spot_lend['offered'] == spot_lend['locked'] or spot_lend['offered'] + spot_lend['locked'] == spot_lend['lendable']*rent_percentage:\n",
         "            print(\"Report :\" , client._get(\"spot_margin/lending_info\")[coin]) \n",
         "            print(\"Task completed do nothing\")\n",
         "            print(\"Waiting for the next task\")  \n",
         "            pass\n",
         "\n",
+        "        elif spot_lend['lendable']*rent_percentage == spot_lend['offered'] + spot_lend['locked']:\n",
+        "            print(\"Report :\" , client._get(\"spot_margin/lending_info\")[coin]) \n",
+        "            print(\"Task completed do nothing\")\n",
+        "            print(\"Waiting for the next task\")  \n",
+        "\n",
         "        else:\n",
         "            if spot_lend['locked'] < spot_lend['lendable']*rent_percentage :\n",
-        "                lending((spot_lend['lendable']*rent_percentage)-spot_lend['locked'])\n",
+        "                lending(-spot_lend['lendable']*rent_percentage)\n",
+        "                #lending((spot_lend['lendable']*rent_percentage)-spot_lend['locked'])\n",
         "                print(\"lending total {}\".format((spot_lend['lendable']*rent_percentage)-spot_lend['locked']))\n",
         "            elif spot_lend['locked'] >= spot_lend['lendable']*rent_percentage :\n",
         "                print(\"Report :\" , client._get(\"spot_margin/lending_info\")[coin]) #####\n",
