--- a/Lending.ipynb
+++ b/Lending.ipynb
@@ -1583,7 +1583,7 @@
         "\n",
         "        spot_lend = client._get(\"spot_margin/lending_info\")[coin]\n",
         "\n",
-        "        if spot_lend['offered'] == spot_lend['locked'] or spot_lend['offered'] + spot_lend['locked'] == spot_lend['lendable']*rent_percentage:\n",
+        "        if spot_lend['offered'] == spot_lend['locked'] and spot_lend['offered'] + spot_lend['locked'] == spot_lend['lendable']*rent_percentage:\n",
         "            print(\"Report :\" , client._get(\"spot_margin/lending_info\")[coin]) \n",
         "            print(\"Task completed do nothing\")\n",
         "            print(\"Waiting for the next task\")  \n",
