--- a/Lending.ipynb
+++ b/Lending.ipynb
@@ -6,7 +6,7 @@
       "name": "Lending.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyM2zTJCT7F+kPKGLDJ0c7e/",
+      "authorship_tag": "ABX9TyP3shwn/pkxWa+G839PWH7b",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1567,7 +1567,8 @@
       "metadata": {
         "id": "RuPxp_qoBUr6",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 701
         },
         "outputId": "22d7872f-1291-44b3-df27-035d67c0d73d"
       },
@@ -1585,7 +1586,7 @@
         "\n",
         "        if spot_lend['offered'] == spot_lend['locked'] and spot_lend['offered']  == spot_lend['lendable']*rent_percentage :\n",
         "            print(\"Report :\" , client._get(\"spot_margin/lending_info\")[coin])\n",
-        "            print('CON 1 : lend = offer + lend ') \n",
+        "            print('CON 1 : lend = offer ') \n",
         "            print(\"Task completed do nothing\")\n",
         "            print(\"Waiting for the next task\")  \n",
         "            pass\n",
@@ -1599,11 +1600,17 @@
         "                pass\n",
         "\n",
         "        elif spot_lend['offered'] == spot_lend['locked'] and spot_lend['locked'] <= spot_lend['lendable']*rent_percentage*1.05:\n",
-        "            if spot_lend['offered'] + spot_lend['locked'] >= spot_lend['lendable']*rent_percentage*.95:\n",
+        "            \n",
+        "            if spot_lend['offered'] != spot_lend['lendable']*rent_percentage :\n",
+        "                print(\"lendin {}\".format(spot_lend['lendable']*rent_percentage))\n",
+        "                lending(spot_lend['lendable']*rent_percentage)\n",
+        "            \n",
+        "            elif spot_lend['offered'] + spot_lend['locked'] >= spot_lend['lendable']*rent_percentage*.95 :\n",
         "                print(\"Report :\" , client._get(\"spot_margin/lending_info\")[coin]) \n",
         "                print('CON 3 : lend < 1.05') \n",
         "                print(\"Task completed do nothing\")\n",
         "                print(\"Waiting for the next task\")  \n",
+        "            else :\n",
         "                pass\n",
         "\n",
         "        elif spot_lend['lendable']*rent_percentage == spot_lend['offered'] + spot_lend['locked']:\n",
@@ -1616,11 +1623,28 @@
         "            print( \"CON 5 : lock < lend\")\n",
         "            lending(spot_lend['lendable']*rent_percentage)\n",
         "            #lending((spot_lend['lendable']*rent_percentage)-spot_lend['locked'])\n",
-        "            print(\"lending total {}\".format((spot_lend['lendable']*rent_percentage)-spot_lend['locked']))  \n",
+        "            print(\"lending total {}\".format((spot_lend['lendable']*rent_percentage)-spot_lend['locked']))\n",
+        "\n",
+        "            \"\"\"\n",
+        "                if spot_lend['locked'] >= spot_lend['lendable']*rent_percentage :\n",
+        "                    print(\"Report :\" , client._get(\"spot_margin/lending_info\")[coin]) #####\n",
+        "                    print(\"Task completed do nothing\")\n",
+        "                    print(\"Waiting for the next task\")\n",
+        "\n",
+        "                else :\n",
+        "                    print(\"Report :\" , client._get(\"spot_margin/lending_info\")[coin]) #####\n",
+        "                    print(\"Task completed do nothing\")\n",
+        "                    print(\"Waiting for the next task\")\n",
+        "            \"\"\"\n",
+        "\n",
+        "        else:\n",
+        "            print(\"I don't know what happen\")\n",
+        "            print(\"Waiting for the next task\")\n",
+        "            print(\"Report :\" , client._get(\"spot_margin/lending_info\")[coin]) #####            \n",
         "        \n",
         "        print(\"Report After Action :\" , client._get(\"spot_margin/lending_info\")[coin])\n",
         "        print(\"-----------------end loop----------------------\")\n",
-        "        print(\"-                                                       -\")\n",
+        "        print(\"-                                             -\")\n",
         "\n",
         "    except :\n",
         "        pass\n",
@@ -1633,7 +1657,7 @@
         "else:\n",
         "  print(\"something error\")"
       ],
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -1655,9 +1679,29 @@
             "Report Before Action : {'coin': 'USD', 'locked': 1.26082645, 'lendable': 2.10137742, 'offered': 1.26082645, 'minRate': 1e-06}\n",
             "Report After Action : {'coin': 'USD', 'locked': 1.26082645, 'lendable': 2.10137742, 'offered': 1.26082645, 'minRate': 1e-06}\n",
             "-----------------end loop----------------------\n",
+            "-                                                       -\n",
+            "-----------------start loop----------------------\n",
+            "total USD is 2.10137742\n",
+            "total USD available to borrow is 0.84055097\n",
+            "total USD of 60.0% amount is 1.2608264519999999\n",
+            "check price 2021-03-24 01:47:54.672677+07:00 @Bangkok time zome\n",
+            "Report Before Action : {'coin': 'USD', 'locked': 1.26082645, 'lendable': 2.10137742, 'offered': 1.26082645, 'minRate': 1e-06}\n",
+            "Report After Action : {'coin': 'USD', 'locked': 1.26082645, 'lendable': 2.10137742, 'offered': 1.26082645, 'minRate': 1e-06}\n",
+            "-----------------end loop----------------------\n",
             "-                                                       -\n"
           ],
           "name": "stdout"
+        },
+        {
+          "output_type": "error",
+          "ename": "KeyboardInterrupt",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-19-79e358609de5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     55\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     56\u001b[0m   \u001b[0mmain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 57\u001b[0;31m   \u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m30\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     58\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     59\u001b[0m \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+          ]
         }
       ]
     },
