--- a/Lending.ipynb
+++ b/Lending.ipynb
@@ -6,7 +6,7 @@
       "name": "Lending.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyP3shwn/pkxWa+G839PWH7b",
+      "authorship_tag": "ABX9TyOF0xsbdVPXcU3c7bUtypbk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1584,30 +1584,30 @@
         "        spot_lend = client._get(\"spot_margin/lending_info\")[coin]\n",
         "        print(\"Report Before Action :\" , client._get(\"spot_margin/lending_info\")[coin])\n",
         "\n",
-        "        if spot_lend['offered'] == spot_lend['locked'] and spot_lend['offered']  == spot_lend['lendable']*rent_percentage :\n",
+        "        if spot_lend['offered'] == spot_lend['locked'] and spot_lend['offered'] == spot_lend['lendable']*rent_percentage :\n",
         "            print(\"Report :\" , client._get(\"spot_margin/lending_info\")[coin])\n",
         "            print('CON 1 : lend = offer ') \n",
         "            print(\"Task completed do nothing\")\n",
         "            print(\"Waiting for the next task\")  \n",
-        "            pass\n",
+        "            \n",
         "\n",
-        "        elif spot_lend['offered'] == spot_lend['locked'] and spot_lend['locked'] >= spot_lend['lendable']*rent_percentage*.95:\n",
-        "            if spot_lend['offered'] + spot_lend['locked'] <= spot_lend['lendable']*rent_percentage*1.05:\n",
+        "        elif spot_lend['offered'] == spot_lend['locked'] and spot_lend['locked'] >= spot_lend['lendable']*rent_percentage :\n",
+        "            if spot_lend['offered'] + spot_lend['locked'] <= spot_lend['lendable']*rent_percentage :\n",
         "                print(\"Report :\" , client._get(\"spot_margin/lending_info\")[coin]) \n",
-        "                print('CON 2 : lend > .95') \n",
+        "                print('CON 2 : lend ') \n",
         "                print(\"Task completed do nothing\")\n",
         "                print(\"Waiting for the next task\")  \n",
-        "                pass\n",
+        "                \n",
         "\n",
-        "        elif spot_lend['offered'] == spot_lend['locked'] and spot_lend['locked'] <= spot_lend['lendable']*rent_percentage*1.05:\n",
+        "        elif spot_lend['offered'] == spot_lend['locked'] and spot_lend['locked'] <= spot_lend['lendable']*rent_percentage :\n",
         "            \n",
         "            if spot_lend['offered'] != spot_lend['lendable']*rent_percentage :\n",
         "                print(\"lendin {}\".format(spot_lend['lendable']*rent_percentage))\n",
         "                lending(spot_lend['lendable']*rent_percentage)\n",
         "            \n",
-        "            elif spot_lend['offered'] + spot_lend['locked'] >= spot_lend['lendable']*rent_percentage*.95 :\n",
+        "            elif spot_lend['offered'] + spot_lend['locked'] >= spot_lend['lendable']*rent_percentage :\n",
         "                print(\"Report :\" , client._get(\"spot_margin/lending_info\")[coin]) \n",
-        "                print('CON 3 : lend < 1.05') \n",
+        "                print('CON 3 : lend') \n",
         "                print(\"Task completed do nothing\")\n",
         "                print(\"Waiting for the next task\")  \n",
         "            else :\n",
@@ -1619,7 +1619,7 @@
         "            print(\"Task completed do nothing\")\n",
         "            print(\"Waiting for the next task\")  \n",
         "\n",
-        "        elif spot_lend['locked'] != spot_lend['lendable']*rent_percentage:\n",
+        "        elif spot_lend['locked'] != spot_lend['lendable']* rent_percentage:\n",
         "            print( \"CON 5 : lock < lend\")\n",
         "            lending(spot_lend['lendable']*rent_percentage)\n",
         "            #lending((spot_lend['lendable']*rent_percentage)-spot_lend['locked'])\n",
@@ -1636,6 +1636,22 @@
         "                    print(\"Task completed do nothing\")\n",
         "                    print(\"Waiting for the next task\")\n",
         "            \"\"\"\n",
+        "        elif spot_lend['locked'] > spot_lend['lendable']*rent_percentage and spot_lend['locked'] > spot_lend['offered']:\n",
+        "            print('CON 6 : lend > offered')\n",
+        "            print(\"lendin {} to set new offered\".format(spot_lend['lendable']*rent_percentage)) \n",
+        "            lending(spot_lend['lendable']*rent_percentage)\n",
+        "\n",
+        "            print(\"Task completed do nothing\")\n",
+        "            print(\"Waiting for the next task\")\n",
+        "\n",
+        "        elif balance[coin]['availableWithoutBorrow'] > 0 and spot_lend['lendable']*rent_percentage != 0 :\n",
+        "            if spot_lend['lendable']*rent_percentage - spot_lend['locked'] > balance[coin]['availableWithoutBorrow']:\n",
+        "                print('CON 7 : availableWithoutBorrow > 0 and lock < availableWithoutBorrow')\n",
+        "                print(\"lendin {} to set new offered\".format(spot_lend['lendable']*rent_percentage)) \n",
+        "                lending(spot_lend['lendable']*rent_percentage)\n",
+        "\n",
+        "            print(\"Waiting for the next task\")  \n",
+        "\n",
         "\n",
         "        else:\n",
         "            print(\"I don't know what happen\")\n",
