--- a/Lendin_V2.ipynb
+++ b/Lendin_V2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Lendin_V2.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyN3dTlRLC8oCKuo4qK1lHoX",
+      "authorship_tag": "ABX9TyMTT3RFzsYWmI02vi1i2U3y",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -167,8 +167,8 @@
         "id": "vFEvFHHr0UZg"
       },
       "source": [
-        "ApiKey = \"Egtiu5hQbvzwhOYpCYH35xcjUQ8GySUUGNCw4jnN\" # apikey\n",
-        "Secret = \"3X0C9xO2BJFARMUsxeWz6ABKz1xGk3sctMq1qGsg\" # apisecret\n",
+        "ApiKey = \"gtiu5hQbvzwhOYpCYH35xcjUQ8GySUUGNCw4jnN\" # apikey\n",
+        "Secret = \"X0C9xO2BJFARMUsxeWz6ABKz1xGk3sctMq1qGsg\" # apisecret\n",
         "my_subaccount_nickname  = \"BOTRebalanceXRP\" # sub-account name\n",
         "\n",
         "# log in \n",
@@ -1659,7 +1659,8 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 1000
         },
         "id": "xa2H_H8D4Zwr",
         "outputId": "8e681366-7663-45e5-f4be-722e794acf8f"
@@ -1691,7 +1692,7 @@
         "else:\n",
         "  print(\"something error\")"
       ],
-      "execution_count": null,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
@@ -1759,9 +1760,86 @@
             "-                                                                   -\n",
             "#################################\n",
             "#####                    FINISH                       #####\n",
+            "#################################\n",
+            "Report Before Action :\n",
+            "total USD is : 2.102367\n",
+            "total USD available to borrow is : 0.0\n",
+            "total USD of 100% amount is : 2.102367\n",
+            "Managing USD\n",
+            "Balance Before, coin : USD , lendable : 2.102367 , locked : 2.102367 , minRate : 1e-06 , offered : 2.102367\n",
+            "check price 2021-03-24 20:14:37.158238+07:00 @Bangkok time zome\n",
+            "Report : {'coin': 'USD', 'locked': 2.102367, 'lendable': 2.102367, 'offered': 2.102367, 'minRate': 1e-06}\n",
+            "CON 1 : lend = offer\n",
+            "Task completed do nothing\n",
+            "Waiting for the next task\n",
+            "Report After Action : {'coin': 'USD', 'locked': 2.102367, 'lendable': 2.102367, 'offered': 2.102367, 'minRate': 1e-06}\n",
+            "-                                                                   -\n",
+            "----------------- End loop : USD ----------------------\n",
+            "-                                                                   -\n",
+            "Report Before Action :\n",
+            "total XRP is : 0.0\n",
+            "total XRP available to borrow is : 0.0\n",
+            "total XRP of 100% amount is : 0.0\n",
+            "Managing XRP\n",
+            "Balance Before, coin : XRP , lendable : 0.0 , locked : 0.0 , minRate : None , offered : 0.0\n",
+            "check price 2021-03-24 20:14:38.930275+07:00 @Bangkok time zome\n",
+            "Report : {'coin': 'XRP', 'locked': 0.0, 'lendable': 0.0, 'offered': 0.0, 'minRate': None}\n",
+            "CON 1 : lend = offer\n",
+            "Task completed do nothing\n",
+            "Waiting for the next task\n",
+            "Report After Action : {'coin': 'XRP', 'locked': 0.0, 'lendable': 0.0, 'offered': 0.0, 'minRate': None}\n",
+            "-                                                                   -\n",
+            "----------------- End loop : XRP ----------------------\n",
+            "-                                                                   -\n",
+            "#################################\n",
+            "#####                    FINISH                       #####\n",
+            "#################################\n",
+            "Report Before Action :\n",
+            "total USD is : 2.102367\n",
+            "total USD available to borrow is : 0.0\n",
+            "total USD of 100% amount is : 2.102367\n",
+            "Managing USD\n",
+            "Balance Before, coin : USD , lendable : 2.102367 , locked : 2.102367 , minRate : 1e-06 , offered : 2.102367\n",
+            "check price 2021-03-24 20:15:40.170580+07:00 @Bangkok time zome\n",
+            "Report : {'coin': 'USD', 'locked': 2.102367, 'lendable': 2.102367, 'offered': 2.102367, 'minRate': 1e-06}\n",
+            "CON 1 : lend = offer\n",
+            "Task completed do nothing\n",
+            "Waiting for the next task\n",
+            "Report After Action : {'coin': 'USD', 'locked': 2.102367, 'lendable': 2.102367, 'offered': 2.102367, 'minRate': 1e-06}\n",
+            "-                                                                   -\n",
+            "----------------- End loop : USD ----------------------\n",
+            "-                                                                   -\n",
+            "Report Before Action :\n",
+            "total XRP is : 0.0\n",
+            "total XRP available to borrow is : 0.0\n",
+            "total XRP of 100% amount is : 0.0\n",
+            "Managing XRP\n",
+            "Balance Before, coin : XRP , lendable : 0.0 , locked : 0.0 , minRate : None , offered : 0.0\n",
+            "check price 2021-03-24 20:15:41.364740+07:00 @Bangkok time zome\n",
+            "Report : {'coin': 'XRP', 'locked': 0.0, 'lendable': 0.0, 'offered': 0.0, 'minRate': None}\n",
+            "CON 1 : lend = offer\n",
+            "Task completed do nothing\n",
+            "Waiting for the next task\n",
+            "Report After Action : {'coin': 'XRP', 'locked': 0.0, 'lendable': 0.0, 'offered': 0.0, 'minRate': None}\n",
+            "-                                                                   -\n",
+            "----------------- End loop : XRP ----------------------\n",
+            "-                                                                   -\n",
+            "#################################\n",
+            "#####                    FINISH                       #####\n",
             "#################################\n"
           ],
           "name": "stdout"
+        },
+        {
+          "output_type": "error",
+          "ename": "KeyboardInterrupt",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-34-0230382c484f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     21\u001b[0m   \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"#################################\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 23\u001b[0;31m   \u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m60\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     24\u001b[0m \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m   \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"something error\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+          ]
         }
       ]
     },
