--- a/compare_3_open.ipynb
+++ b/compare_3_open.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "compare 3% open.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPug2rerkr9dBED+P6IRaGg",
+      "authorship_tag": "ABX9TyM4BF9UJsFzt8wqCDqf5DOa",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -154,29 +154,6 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "YPKHZe8rUW12",
-        "outputId": "15657fd5-a3aa-4337-bcf0-f451e759df1c"
-      },
-      "source": [
-        "pip install ciso8601"
-      ],
-      "execution_count": 5,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Requirement already satisfied: ciso8601 in /usr/local/lib/python3.7/dist-packages (2.1.3)\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
         "id": "iI-gviQHnRKR",
         "outputId": "2eb85db3-962c-46b2-adb3-3a690b0ecc38"
       },
@@ -203,50 +180,10 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "cxIky3EYUWwq",
-        "outputId": "c9223261-d9ba-4adc-c0af-15a63ddc857a"
-      },
-      "source": [
-        "pip install ccxt"
-      ],
-      "execution_count": 7,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Requirement already satisfied: ccxt in /usr/local/lib/python3.7/dist-packages (1.47.68)\n",
-            "Requirement already satisfied: certifi>=2018.1.18 in /usr/local/lib/python3.7/dist-packages (from ccxt) (2020.12.5)\n",
-            "Requirement already satisfied: cryptography>=2.6.1 in /usr/local/lib/python3.7/dist-packages (from ccxt) (3.4.7)\n",
-            "Requirement already satisfied: setuptools>=38.5.1 in /usr/local/lib/python3.7/dist-packages (from ccxt) (54.2.0)\n",
-            "Requirement already satisfied: aiohttp<3.8,>=3.7.4; python_version >= \"3.5.2\" in /usr/local/lib/python3.7/dist-packages (from ccxt) (3.7.4.post0)\n",
-            "Requirement already satisfied: aiodns<2.1,>=1.1.1; python_version >= \"3.5.2\" in /usr/local/lib/python3.7/dist-packages (from ccxt) (2.0.0)\n",
-            "Requirement already satisfied: requests>=2.18.4 in /usr/local/lib/python3.7/dist-packages (from ccxt) (2.23.0)\n",
-            "Requirement already satisfied: yarl==1.1.0; python_version >= \"3.5.2\" in /usr/local/lib/python3.7/dist-packages (from ccxt) (1.1.0)\n",
-            "Requirement already satisfied: cffi>=1.12 in /usr/local/lib/python3.7/dist-packages (from cryptography>=2.6.1->ccxt) (1.14.5)\n",
-            "Requirement already satisfied: async-timeout<4.0,>=3.0 in /usr/local/lib/python3.7/dist-packages (from aiohttp<3.8,>=3.7.4; python_version >= \"3.5.2\"->ccxt) (3.0.1)\n",
-            "Requirement already satisfied: multidict<7.0,>=4.5 in /usr/local/lib/python3.7/dist-packages (from aiohttp<3.8,>=3.7.4; python_version >= \"3.5.2\"->ccxt) (5.1.0)\n",
-            "Requirement already satisfied: chardet<5.0,>=2.0 in /usr/local/lib/python3.7/dist-packages (from aiohttp<3.8,>=3.7.4; python_version >= \"3.5.2\"->ccxt) (3.0.4)\n",
-            "Requirement already satisfied: attrs>=17.3.0 in /usr/local/lib/python3.7/dist-packages (from aiohttp<3.8,>=3.7.4; python_version >= \"3.5.2\"->ccxt) (20.3.0)\n",
-            "Requirement already satisfied: typing-extensions>=3.6.5 in /usr/local/lib/python3.7/dist-packages (from aiohttp<3.8,>=3.7.4; python_version >= \"3.5.2\"->ccxt) (3.7.4.3)\n",
-            "Requirement already satisfied: pycares>=3.0.0 in /usr/local/lib/python3.7/dist-packages (from aiodns<2.1,>=1.1.1; python_version >= \"3.5.2\"->ccxt) (3.1.1)\n",
-            "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.7/dist-packages (from requests>=2.18.4->ccxt) (2.10)\n",
-            "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /usr/local/lib/python3.7/dist-packages (from requests>=2.18.4->ccxt) (1.24.3)\n",
-            "Requirement already satisfied: pycparser in /usr/local/lib/python3.7/dist-packages (from cffi>=1.12->cryptography>=2.6.1->ccxt) (2.20)\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "2GqtWl_4UfY9"
       },
       "source": [
-        "import ccxt, hmac, datetime, pytz, json, hashlib, requests, urllib\n",
+        "import datetime, pytz, json, hashlib, requests, urllib\n",
         "from time import time, sleep\n",
         "import urllib.parse\n",
         "from urllib.parse import urlencode\n",
@@ -269,89 +206,6 @@
         "import matplotlib.pyplot as plt"
       ],
       "execution_count": 8,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "akT-J5L13aMC"
-      },
-      "source": [
-        "# pd.set_option(\"display.max_rows\", None, \"display.max_columns\", None)"
-      ],
-      "execution_count": 9,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "6vdx2m_xUsr3"
-      },
-      "source": [
-        "Public_URL = 'https://ftx.com/api'\n",
-        "PUBLIC_API_URL = 'https://ftx.com/api'\n",
-        "PRIVATE_API_URL = 'https://ftx.com/api'"
-      ],
-      "execution_count": 10,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "QBuoBDpbU-HJ"
-      },
-      "source": [
-        "# login\n",
-        "ApiKey = \"kcHHCVd9mkUsox9CRGLkgnUVBt8caRK4Sjixln53\" # apikey\n",
-        "Secret = \"fZoLhli6sZ_y5rbBZXK_YexO3Jc30hLNq5If9FXQ\" # apisecret\n",
-        "my_subaccount_nickname  = \"BOTXRP\" # sub-account name\n",
-        "\n",
-        "# log in \n",
-        "exchange = ccxt.ftx({\n",
-        " 'api_key': ApiKey,  # API Keys\n",
-        " 'secret': Secret}) # API Secret"
-      ],
-      "execution_count": 11,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "wm4W5pmmU-Ds",
-        "outputId": "b525c1f2-838c-465a-ba9a-4a0364725a5e"
-      },
-      "source": [
-        "# Sub Account Check\n",
-        "if my_subaccount_nickname == \"0\" :\n",
-        "  print(\"\\n\"\"Main Account\")     \n",
-        "else:\n",
-        "  print( \"\\n\"'Sub Account - ',my_subaccount_nickname)\n",
-        "  exchange.headers = {  'ftx-SUBACCOUNT': my_subaccount_nickname   }"
-      ],
-      "execution_count": 12,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "\n",
-            "Sub Account -  BOTXRP\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "a0yGrkc2U-Ap"
-      },
-      "source": [
-        "fetch_data = exchange.fetch_markets()"
-      ],
-      "execution_count": 13,
       "outputs": []
     },
     {
