--- a/Hurst_Exponent_to_analyse_the_Stock_and_Crypto_market_with_Python.ipynb
+++ b/Hurst_Exponent_to_analyse_the_Stock_and_Crypto_market_with_Python.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Hurst Exponent to analyse the Stock and Crypto market with Python.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOq/jDfoxgiAUoRITblagb4",
+      "authorship_tag": "ABX9TyOJItscZhNlhT8MuE42/5KZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -143,6 +143,15 @@
             "needs_background": "light"
           }
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "wpmtn_pa_UaQ"
+      },
+      "source": [
+        "We will also generate some artificial data to show you examples of all the 3 cases and how accurately we are able to identify the Hurst Exponent. The following code snippet will show it."
       ]
     },
     {
